--- a/icefaces/branches/icefaces-1.7/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
+++ b/icefaces/branches/icefaces-1.7/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
@@ -256,7 +256,7 @@ input.iceSelInpDateClosePopup {
 	border-collapse:collapse;
 }
 
-.iceDatTblColHdr , .iceDatTblColHdr1, .iceDatTblColHdr2, .iceDatTblColGrpHdrCol{ 
+.iceDatTblColHdr , .iceDatTblColHdr1, .iceDatTblColHdr2, .iceDatTblColGrpHdrCol, .iceDatTblFtr{ 
 /* was iceTblHeader */
     background-color: #EFEFEF;
     background-image: url(css-images/table_col_header.gif);
@@ -285,7 +285,31 @@ input.iceSelInpDateClosePopup {
 }
 
 .iceDatTblHdr{} /*was iceTblHeader */
-.iceDatTblFtr{} /*was iceTblFooter */
+.iceDatTblFtr {
+    background: none;
+    border-top: 1px solid #CCCCCC;  
+}
+
+.iceDatTblScrlSpr{ 
+    background: url( './css-images/table_col_header.gif' ) repeat-x bottom left; 
+    background-color: #EFEFEF;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #CCCCCC;
+}
+
+.iceDatTblScrlSprFtr{ 
+    border-bottom: 1px solid #CCCCCC;
+    border-right: 1px solid #CCCCCC;        
+}
+
+.iceDatTblScrlSprFtr .iceDatTblFtr{ 
+    border-bottom: none;     
+}
+
+.iceDatTblScrlSpr .iceDatTblColHdr1, .iceDatTblScrlSpr .iceDatTblColHdr2 {
+    border-left-style: none;
+    border-top-style: none;
+}
 
 .iceDatTblResHdlr {
     margin:0px;; 
